--- a/DotNetprojet2-main/P2FixAnAppDotNetCode/wwwroot/lib/bootstrap/scss/_reboot.scss
+++ b/DotNetprojet2-main/P2FixAnAppDotNetCode/wwwroot/lib/bootstrap/scss/_reboot.scss
@@ -377,7 +377,7 @@ input[type="search"] {
 
 // todo: needed?
 output {
-  display: inline-block;
+//  display: inline-block;
 // font-size: $font-size-base;
 //  line-height: $line-height;
 //  color: $input-color;
